--- a/name666.html
+++ b/name666.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>game</title>
 		<style type="text/css">
 			body{
 				background-image: url(https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fhbimg.huabanimg.com%2F4d7668ac456d94026181040101170374611fcd723296f-hbpmm5_fw658&refer=http%3A%2F%2Fhbimg.huabanimg.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1621515229&t=dcf520b439bdb6f2b4653b3d25c53133);
@@ -30,7 +30,7 @@
 			.title{
 				margin-top:50px ;
 				text-align: center;
-				font-size: 66px;
+				font-size: 130px;
 				color: white;
 			}
 			.btn{
@@ -43,12 +43,13 @@
 				left: 15%;
 				bottom: 50px;
 				text-align: center;
-				background-color: #ccc;
+				background: linear-gradient(90deg,rgb(117, 117, 224),rgb(255, 0, 64));
+				color: white;
 			}
 		</style>
 	</head>
 	<body>
-		<h1 class="title">大型断片现场</h1>
+		<h1 id="title" class="title">大型断片现场</h1>
 		<div class="father">
 			<div>111</div>
 			<div>222</div>
@@ -63,7 +64,9 @@
 		<script type="text/javascript">
 			var father = document.getElementsByClassName("father")[0].children;
 			var btn = document.getElementById("btn");
+			var title = document.getElementById("title");
 			var num = null;
+			var sum = [];
 			var flag = 0;
 			var intvail = null;
 			function updatetime(){
@@ -74,6 +77,13 @@
 							father[i].style.backgroundColor = "#FDCB0B";
 						}
 						num = Math.floor(Math.random()*8);
+						let c1 = Math.floor(Math.random()*10);
+						let c2 = Math.floor(Math.random()*10);
+						let c3 = Math.floor(Math.random()*10);
+						let c4 = Math.floor(Math.random()*10);
+						let c5 = Math.floor(Math.random()*10);
+						let c6 = Math.floor(Math.random()*10);
+						title.style.color = "#"+c1+c2+c3+c4+c5+c6;
 						father[num].style.backgroundColor="#fff";
 					},1)
 					flag = 1;
