--- a/name666.html
+++ b/name666.html
@@ -59,6 +59,7 @@
 			<div>666</div>
 			<div>777</div>
 			<div>848</div>
+			<div>848</div>
 		</div>
 		<div class="btn" id="btn" onclick="updatetime()">开始</div>
 		<script type="text/javascript">
@@ -69,6 +70,7 @@
 			var sum = [];
 			var flag = 0;
 			var intvail = null;
+			var namenum = 0;
 			function updatetime(){
 				if(flag==0){
 					btn.innerText="停止"
@@ -76,7 +78,7 @@
 						for(var i = 0;i<father.length;i++){
 							father[i].style.backgroundColor = "#FDCB0B";
 						}
-						num = Math.floor(Math.random()*8);
+						num = Math.floor(Math.random()*father.length);
 						let c1 = Math.floor(Math.random()*10);
 						let c2 = Math.floor(Math.random()*10);
 						let c3 = Math.floor(Math.random()*10);
@@ -88,7 +90,14 @@
 					},1)
 					flag = 1;
 				}else if(flag == 1){
-					console.log(num);
+					// if(namenum == 0){
+					// 	for(var i = 0;i<father.length;i++){
+					// 		father[i].style.backgroundColor = "#FDCB0B";
+					// 	}
+					// 	father[namenum].style.backgroundColor="#fff";
+					// }
+					// namenum++;
+					console.log(father.length);
 					btn.innerText="开始"
 					clearInterval(intvail);
 					flag = 0;
