--- a/name666.html
+++ b/name666.html
@@ -52,7 +52,7 @@
 		<canvas id="canvas"></canvas>
 		<h1 id="title" class="title">抽大奖</h1>
 		<div class="father">
-			<div>iPhone14</div>
+			<div>iPhone</div>
 			<div>iPhone14Pro</div>
 			<div>iPhone14ProMax</div>
 			<div>iPhone13</div>
