--- a/name666.html
+++ b/name666.html
@@ -61,7 +61,7 @@
 			<div>iPhone12</div>
 			<div>iPhone12Pro</div>
 			<div>iPhone12ProMax</div>
-			<div>谢谢参与</div>
+			<div>谢谢</div>
 		</div>
 		<div class="btn" id="btn" onclick="updatetime()">开始</div>
 		<script type="text/javascript">
