--- a/love.html
+++ b/love.html
@@ -45,7 +45,7 @@
       <!-- 爱心 -->
       <canvas id="pinkboard" class="container"> </canvas>
     </div>
-
+    <div>宝宝，生日快乐</div>
   </body>
 </html>
 <script>
