--- a/summoney.html
+++ b/summoney.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>根据业绩计算工资</title>
+    <title>Document</title>
     <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css" />
     <style>
       body {
@@ -60,7 +60,7 @@
             } else if (num >= 35000 && num < 50000) {
               return num * 0.28 + 2800 + 1000 + 1500
             } else if (num >= 50000) {
-              return num * 0.28 + 2800 + 1000 + 2000
+              return num * 0.3 + 2800 + 1000 + 2000
             }
           },
         },
